Update styles and add a little print styles

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="information">
+    <header class="information container">
         <div class="logo"></div>
         <div class="name">
             <h1>Tim Dalbey</h1>
@@ -25,26 +25,29 @@
             </ul>
         </div>
     </header>
-    <section class="skills">
+    <section class="skills container">
         <h2 class="title">// Skills</h2>
         <ul>
             <li class="skill">WordPress</li>
-            <li class="skill">WooCommerce</li>
             <li class="skill">PHP</li>
             <li class="skill">Javscript</li>
             <li class="skill">jQuery</li>
-            <li class="skill">Backbone</li>
             <li class="skill">Angular</li>
-            <li class="skill">HTML</li>
-            <li class="skill">CSS</li>
+            <li class="skill">Backbone</li>
+            <li class="skill">HTML5</li>
+            <li class="skill">CSS3</li>
             <li class="skill">SASS</li>
             <li class="skill">Grunt</li>
+            <li class="skill">Salesforce Developer</li>
         </ul>
     </section>
-    <section class="positions">
+    <section class="positions container">
         <div class="position is-current">
-            <h2 class="title">@ CURRENT POSITION TOWER MARKETING</h2>
-            <h3 class="date">JANURARY 2015 - CURRENT</h3>
+            <h2 class="title color__green">@ POSITIONS</h2>
+            <div class="wrapper">
+                <h2 class="title">TOWER MARKETING</h2>
+                <h3 class="date">JANURARY 2015 - CURRENT</h3>
+            </div>
             <ul>
                 <b>Responsibilities:</b>
                 <li class="responsibility">Build out custom themes and plugins for clients.</li>
@@ -61,8 +64,10 @@
             </ul>
         </div>
         <div class="position">
-            <h2 class="title">LAUNCH DYNAMIC MEDIA</h2>
-            <h3 class="date">SEPTEMBER 2013 - JANURARY 2015</h3>
+            <div class="wrapper">
+                <h2 class="title">LAUNCH DYNAMIC MEDIA</h2>
+                <h3 class="date">SEPTEMBER 2013 - JANURARY 2015</h3>
+            </div>
             <ul class="responsibilities">
                 <b>Responsibilities:</b>
                 <li class="responsibility">Build out custom themes and plugins for clients.</li>
@@ -74,7 +79,7 @@
             </ul>
             <ul class="values">
                 <b>Value:</b>
-                <li class="value"><i class="fa fa-stamp" aria-hidden="true"></i> Started and helped develop an internal starter theme to streamline build out time and standardize sites.</li>
+                <li class="value"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Started and helped develop an internal starter theme to streamline build out time and standardize sites.</li>
                 <li class="value"><i class="fa fa-terminal" aria-hidden="true"></i> Created an internal build process of our projects to help manage dependencies better.</li>
                 <li class="value"><i class="fa fa-clock-o" aria-hidden="true"></i> Built custom Salesforce application to track project time and manage projects.</li>
             </ul>
